--- a/Messenger App/app/build.gradle
+++ b/Messenger App/app/build.gradle
@@ -52,5 +52,5 @@ dependencies {
     implementation platform('com.google.firebase:firebase-bom:28.2.1')
     implementation 'com.google.firebase:firebase-analytics'
     implementation 'com.google.firebase:firebase-database-ktx'
-
+    implementation 'com.google.firebase:firebase-auth-ktx'
 }
