--- a/Messenger App/app/src/main/AndroidManifest.xml
+++ b/Messenger App/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="ge.gdara17.messengerapp">
 
     <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -13,16 +14,14 @@
         <activity android:name=".contacts.ContactsActivity" />
         <activity android:name=".chat.ChatActivity" />
         <activity android:name=".login.SignUpActivity" />
-        <activity android:name=".login.LoginActivity" />
-        <activity android:name=".main.MainActivity">
+        <activity android:name=".login.LogInActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".main.MainActivity" />
     </application>
-
-
 
 </manifest>
